# openwrt-rpcd

./: CMakeLists.txt  main.c  plugin.c  session.c  test.c  uci.c
include/rpcd/: plugin.h  session.h  uci.h
